fix: align footer copyright text to the end of line
(cherry picked from commit c22687cccd3d1bf4c3607af3bad3360c3fc1bb9b)

--- a/gravitee-apim-portal-webui-next/src/components/footer/footer.component.scss
+++ b/gravitee-apim-portal-webui-next/src/components/footer/footer.component.scss
@@ -23,3 +23,9 @@
   justify-content: space-between;
   overflow-x: hidden;
 }
+
+.footer {
+  &__copyright {
+    text-align: end;
+  }
+}
